# whithercanada

./: .pre-commit-hooks.yaml  README.md  cookiecutter.json  setup.cfg  setup.py  whitercanada.json
tests/: test_commit_message.py  test_config.py
whitercanada/: __init__.py  check_commit_message.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
