[metadata]
name = whitercanada
version = 0.1.0
description = Some internal pre-commit hooks for THG applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/whitercanada
author = Batuhan Taskaya
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    wc_check_commit_message = whitercanada.check_commit_message:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
