[metadata]
name = whitercanada
version = 0.1.0
description = Some internal pre-commit hooks for THG applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thg-consulting/whitercanada
author = thg

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    wc_check_commit_message = whitercanada.check_commit_message:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
