[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1.0
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thg-consulting/{{ cookiecutter.project_slug }}
author = Batuhan Taskaya
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
