[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1.0
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thg-consulting/{{ cookiecutter.project_slug }}
author = thg

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
